feat: add profile images on server & client
